<resources>
    <string name="app_name">CS:GO Skins</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="title_activity_type">TypeActivity</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="blank_string"></string>
    <string name="weapons">Weapons</string>
    <string name="collections">Collections</string>
    <string-array name="drawer_list">
        <item>Pistols</item>
        <item>Heavy</item>
        <item>SMGs</item>
        <item>Rifles</item>
        <item>Knives</item>
        <item>Cases</item>
        <item>Maps</item>
    </string-array>
    <string name="ak_47">AK-47</string>
    <string name="aug">AUG</string>
    <string name="awp">AWP</string>
    <string name="bayonet">Bayonet</string>
    <string name="butterfly_knife">Butterfly Knife</string>
    <string name="cz75_auto">CZ75-Auto</string>
    <string name="desert_eagle">Desert Eagle</string>
    <string name="dual_berettas">Dual Berettas</string>
    <string name="famas">FAMAS</string>
    <string name="five_seven">Five-SeveN</string>
    <string name="flip_knife">Flip Knife</string>
    <string name="g3sg1">G3SG1</string>
    <string name="galil_ar">Galil AR</string>
    <string name="glock_18">Glock-18</string>
    <string name="gut_knife">Gut Knife</string>
    <string name="huntsman_knife">Huntsman Knife</string>
    <string name="karambit">Karambit</string>
    <string name="m249">M249</string>
    <string name="m4a1_s">M4A1-S</string>
    <string name="m4a4">M4A4</string>
    <string name="m9_bayonet">M9 Bayonet</string>
    <string name="mac_10">MAC-10</string>
    <string name="mag_7">MAG-7</string>
    <string name="mp7">MP7</string>
    <string name="mp9">MP9</string>
    <string name="negev">Negev</string>
    <string name="nova">Nova</string>
    <string name="p2000">P2000</string>
    <string name="p250">P250</string>
    <string name="p90">P90</string>
    <string name="pp_bizon">PP-Bizon</string>
    <string name="scar_20">SCAR-20</string>
    <string name="sg_553">SG 553</string>
    <string name="ssg_08">SSG 08</string>
    <string name="sawed_off">Sawed-Off</string>
    <string name="tec_9">Tec-9</string>
    <string name="ump_45">UMP-45</string>
    <string name="usp_s">USP-S</string>
    <string name="xm1014">XM1014</string>
    <string name="abyss">Abyss</string>
    <string name="acid_fade">Acid Fade</string>
    <string name="afterimage">Afterimage</string>
    <string name="amber_fade">Amber Fade</string>
    <string name="anodized_gunmetal">Anodized Gunmetal</string>
    <string name="anodized_navy">Anodized Navy</string>
    <string name="antique">Antique</string>
    <string name="arctic_camo">Arctic Camo</string>
    <string name="army_mesh">Army Mesh</string>
    <string name="army_recon">Army Recon</string>
    <string name="army_sheen">Army Sheen</string>
    <string name="ash_wood">Ash Wood</string>
    <string name="asiimov">Asiimov</string>
    <string name="atomic_alloy">Atomic Alloy</string>
    <string name="azure_zebra">Azure Zebra</string>
    <string name="boom">BOOM</string>
    <string name="basilisk">Basilisk</string>
    <string name="bengal_tiger">Bengal Tiger</string>
    <string name="black_laminate">Black Laminate</string>
    <string name="black_limba">Black Limba</string>
    <string name="blaze">Blaze</string>
    <string name="blaze_orange">Blaze Orange</string>
    <string name="blind_spot">Blind Spot</string>
    <string name="blizzard_marbleized">Blizzard Marbleized</string>
    <string name="blood_tiger">Blood Tiger</string>
    <string name="blood_in_the_water">Blood in the Water</string>
    <string name="bloomstick">Bloomstick</string>
    <string name="blue_fissure">Blue Fissure</string>
    <string name="blue_laminate">Blue Laminate</string>
    <string name="blue_spruce">Blue Spruce</string>
    <string name="blue_steel">Blue Steel</string>
    <string name="blue_streak">Blue Streak</string>
    <string name="blue_titanium">Blue Titanium</string>
    <string name="bone_machine">Bone Machine</string>
    <string name="bone_mask">Bone Mask</string>
    <string name="bone_pile">Bone Pile</string>
    <string name="boreal_forest">Boreal Forest</string>
    <string name="brass">Brass</string>
    <string name="bratatat">Bratatat</string>
    <string name="briar">Briar</string>
    <string name="bright_water">Bright Water</string>
    <string name="bulldozer">Bulldozer</string>
    <string name="bullet_rain">Bullet Rain</string>
    <string name="business_class">Business Class</string>
    <string name="caged_steel">Caged Steel</string>
    <string name="caiman">Caiman</string>
    <string name="calicamo">CaliCamo</string>
    <string name="candy_apple">Candy Apple</string>
    <string name="caramel">Caramel</string>
    <string name="carbon_fiber">Carbon Fiber</string>
    <string name="cardiac">Cardiac</string>
    <string name="cartel">Cartel</string>
    <string name="case_hardened">Case Hardened</string>
    <string name="catacombs">Catacombs</string>
    <string name="cerberus">Cerberus</string>
    <string name="chainmail">Chainmail</string>
    <string name="chalice">Chalice</string>
    <string name="chameleon">Chameleon</string>
    <string name="chatterbox">Chatterbox</string>
    <string name="chemical_green">Chemical Green</string>
    <string name="coach_class">Coach Class</string>
    <string name="cobalt_disruption">Cobalt Disruption</string>
    <string name="cobalt_halftone">Cobalt Halftone</string>
    <string name="cobalt_quartz">Cobalt Quartz</string>
    <string name="cold_blooded">Cold Blooded</string>
    <string name="colony">Colony</string>
    <string name="commuter">Commuter</string>
    <string name="condemned">Condemned</string>
    <string name="conspiracy">Conspiracy</string>
    <string name="contamination">Contamination</string>
    <string name="contractor">Contractor</string>
    <string name="contrast_spray">Contrast Spray</string>
    <string name="copper">Copper</string>
    <string name="copper_galaxy">Copper Galaxy</string>
    <string name="copperhead">Copperhead</string>
    <string name="corporal">Corporal</string>
    <string name="corticera">Corticera</string>
    <string name="crimson_web">Crimson Web</string>
    <string name="curse">Curse</string>
    <string name="cyanospatter">Cyanospatter</string>
    <string name="cyrex">Cyrex</string>
    <string name="damascus_steel">Damascus Steel</string>
    <string name="dark_age">Dark Age</string>
    <string name="dark_water">Dark Water</string>
    <string name="dart">Dart</string>
    <string name="deadly_poison">Deadly Poison</string>
    <string name="death_rattle">Death Rattle</string>
    <string name="death_by_kitty">Death by Kitty</string>
    <string name="delusion">Delusion</string>
    <string name="demeter">Demeter</string>
    <string name="demolition">Demolition</string>
    <string name="desert_strike">Desert-Strike</string>
    <string name="desert_storm">Desert Storm</string>
    <string name="desert_warfare">Desert Warfare</string>
    <string name="detour">Detour</string>
    <string name="doomkitty">Doomkitty</string>
    <string name="doppler">Doppler</string>
    <string name="dragon_king">龍王 (Dragon King)</string>
    <string name="dragon_lore">Dragon Lore</string>
    <string name="dragon_tattoo">Dragon Tattoo</string>
    <string name="dry_season">Dry Season</string>
    <string name="electric_hive">Electric Hive</string>
    <string name="emerald">Emerald</string>
    <string name="emerald_dragon">Emerald Dragon</string>
    <string name="emerald_pinstripe">Emerald Pinstripe</string>
    <string name="facets">Facets</string>
    <string name="fade">Fade</string>
    <string name="faded_zebra">Faded Zebra</string>
    <string name="fallout_warning">Fallout Warning</string>
    <string name="fire_elemental">Fire Elemental</string>
    <string name="fire_serpent">Fire Serpent</string>
    <string name="firestarter">Firestarter</string>
    <string name="first_class">First Class</string>
    <string name="forest_ddpat">Forest DDPAT</string>
    <string name="forest_leaves">Forest Leaves</string>
    <string name="forest_night">Forest Night</string>
    <string name="fowl_play">Fowl Play</string>
    <string name="franklin">Franklin</string>
    <string name="full_stop">Full Stop</string>
    <string name="gator_mesh">Gator Mesh</string>
    <string name="ghost_camo">Ghost Camo</string>
    <string name="glacier_mesh">Glacier Mesh</string>
    <string name="golden_koi">Golden Koi</string>
    <string name="granite_marbleized">Granite Marbleized</string>
    <string name="graphite">Graphite</string>
    <string name="grassland">Grassland</string>
    <string name="grassland_leaves">Grassland Leaves</string>
    <string name="graven">Graven</string>
    <string name="green_apple">Green Apple</string>
    <string name="green_plaid">Green Plaid</string>
    <string name="griffin">Griffin</string>
    <string name="grinder">Grinder</string>
    <string name="grotto">Grotto</string>
    <string name="groundwater">Groundwater</string>
    <string name="guardian">Guardian</string>
    <string name="gunsmoke">Gunsmoke</string>
    <string name="hand_cannon">Hand Cannon</string>
    <string name="hazard">Hazard</string>
    <string name="heat">Heat</string>
    <string name="heaven_guard">Heaven Guard</string>
    <string name="heirloom">Heirloom</string>
    <string name="hemoglobin">Hemoglobin</string>
    <string name="hexane">Hexane</string>
    <string name="highwayman">Highwayman</string>
    <string name="hive">Hive</string>
    <string name="hot_rod">Hot Rod</string>
    <string name="hot_shot">Hot Shot</string>
    <string name="howl">Howl</string>
    <string name="hunting_blind">Hunting Blind</string>
    <string name="hypnotic">Hypnotic</string>
    <string name="indigo">Indigo</string>
    <string name="irradiated_alert">Irradiated Alert</string>
    <string name="isaac">Isaac</string>
    <string name="ivory">Ivory</string>
    <string name="jaguar">Jaguar</string>
    <string name="jet_set">Jet Set</string>
    <string name="jungle">Jungle</string>
    <string name="jungle_ddpat">Jungle DDPAT</string>
    <string name="jungle_dashed">Jungle Dashed</string>
    <string name="jungle_spray">Jungle Spray</string>
    <string name="jungle_tiger">Jungle Tiger</string>
    <string name="kami">Kami</string>
    <string name="knight">Knight</string>
    <string name="koi">Koi</string>
    <string name="labyrinth">Labyrinth</string>
    <string name="leather">Leather</string>
    <string name="lichen_dashed">Lichen Dashed</string>
    <string name="lightning_strike">Lightning Strike</string>
    <string name="magma">Magma</string>
    <string name="malachite">Malachite</string>
    <string name="man_o_war">Man-o\'-war</string>
    <string name="marble_fade">Marble Fade</string>
    <string name="marina">Marina</string>
    <string name="covert">Covert</string>
    <string name="operation_bravo_case">Operation Bravo Case</string>
    <string name="stattrak_available">StatTrak</string>
    <string name="statrak_factory_new">StatTrak Factory New</string>
    <string name="statrak_minimal_wear">StatTrak Minimal Wear</string>
    <string name="statrak_field_tested">StatTrak Field-Tested</string>
    <string name="statrak_well_worn">StatTrak Well-Worn</string>
    <string name="statrak_battle_scarred">StatTrak Battle-Scarred</string>
    <string name="factory_new">Factory New</string>
    <string name="minimal_wear">Minimal Wear</string>
    <string name="field_tested">Field-Tested</string>
    <string name="well_worn">Well-Worn</string>
    <string name="battle_scarred">Battle-Scarred</string>
</resources>